@@ -1,6 +1,9 @@
 2.0.8
 =====
 - Fixed "Root element name cannot be null" exception when processing non-complete documents (fragments).
+- Modified Arguments constructor to public for testing purposes.
+- Modified TemplateRepository constructor to public for testing purposes.
+- Fixed "get{outputType}For(node)" methods in DOMUtils.
 
 
 2.0.7
